--- a/NetMaxx/src/main/resources/static/index.html
+++ b/NetMaxx/src/main/resources/static/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Net Max Application</title>
+    <title>NetMaxx</title>
 </head>
 <body>
     <h1>Net Max Application</h1>
     <a href="register">Register User</a>
-
-</body>
+ </body>
 </html>
